test/symtabTest/pass/test6.ic
class FieldAccess {
	int x;
	
	void test () {
		x = 5;
	}
}