test/symtabTest/fail/test5.ic
class MultiMethods {
	void myMethod () {
	
	}
	
	void myMethod () {
	
	}
}